--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 <body>
 
   <div class="marquee">
-    <span>Welcome to Rx Portfolio — Premium Video & Edit Showcase!</span>
+    <span>Welcome to 𓆩Rahul 𔒝 kushwaha𓆪 Edit store — Premium Edit Showcase!</span>
   </div>
 
   <header>
     <h1>Rx</h1>
-    <p>I create premium YouTube reels, shorts, and cinematic edits that grab attention of audience.</p>
+    <p>I Edit video clips to make it more better in my own way .</p>
   </header>
 
   <section>
@@ -139,7 +139,7 @@
   <section class="about">
     <h2>About Me</h2>
     <p>
-      I'm Rx, a passionate video editor who transforms ordinary visuals into scroll-stopping content. I specialize in edits for tech, gaming, motivational, and cinematic content. Tools I use: CapCut, Photopea, Picsart, and other mobile apps.
+      I'm Rx, a passionate video editor who transforms ordinary visuals into cool visuals .I edit when I'm in the mood. Tools I use: CapCut, Photopea, Picsart, and other mobile apps.
     </p>
   </section>
 
