--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       text-align: center;
       font-family: 'Raleway', sans-serif;
       font-size: 2rem;
-      background: linear-gradient(90deg, #FFD700, #FF8C00);
+      background: linear-gradient(90deg, #4ddbc6, #8981f7);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       margin-bottom: 30px;
@@ -117,7 +117,7 @@
 <body>
 
   <div class="marquee">
-    <span>Welcome to 𓆩Rahul 𔒝 kushwaha𓆪 Edit store — Premium Edit Showcase!</span>
+    <span>Welcome to Rahul 𔒝 kushwaha Edit store ~ Premium Edit Showcase!</span>
   </div>
 
   <header>
@@ -126,7 +126,7 @@
   </header>
 
   <section>
-    <h2>My Work</h2>
+    <h2>𓆩My Edits𓆪</h2>
     <div class="gallery">
       <video controls>
         <source src="videos/video1.mp4" type="video/mp4">
