--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       text-align: center;
       font-family: 'Raleway', sans-serif;
       font-size: 2rem;
-      background: linear-gradient(90deg, #4ddbc6, #8981f7);
+      background: linear-gradient(90deg, #0374ff, #8260d6);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       margin-bottom: 30px;
