--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
 
   <header>
     <h1>Rx</h1>
-    <p>I Edit video clips to make it more better in my own way .</p>
+    <p>I edit video clips to make it more better in my own way .</p>
   </header>
 
   <section>
     <h2>𓆩My Edits𓆪</h2>
     <div class="gallery">
       <video controls>
-        <source src="videos/video1.mp4" type="video/mp4">
+        <source src="video1.mp4" type="video/mp4">
       </video>
       <video controls>
         <source src="videos/video2.mp4" type="video/mp4">
