--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <h2>𓆩My Edits𓆪</h2>
     <div class="gallery">
       <video controls>
-        <source src="video1.mp4" type="video/mp4">
+        <source src="videos/video1.mp4" type="video/mp4">
       </video>
       <video controls>
         <source src="videos/video2.mp4" type="video/mp4">
