--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         <source src="Edits/Edit1.mp4" type="video/mp4">
       </video>
       <video controls>
-        <source src="videos/video2.mp4" type="video/mp4">
+        <source src="Edits/Edit2.mp4" type="video/mp4">
       </video>
       <video controls>
-        <source src="videos/video3.mp4" type="video/mp4">
+        <source src="Edits/Edit3.mp4" type="video/mp4">
       </video>
       <video controls>
-        <source src="videos/video4.mp4" type="video/mp4">
+        <source src="Edits/Edit4.mp4" type="video/mp4">
       </video>
     </div>
   </section>
