--- a/index.html
+++ b/index.html
@@ -121,6 +121,30 @@
   </div>
 
   <header>
+    <img src="logo.png" alt="Logo" style="
+  width: 60px; 
+  height: 60px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  margin-bottom: 10px;
+  box-shadow: 0 0 15px #FFD700, 0 0 30px #FFD700, 0 0 45px #FFD700;
+">
+    <style>
+@keyframes goldGlow {
+  0% { box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700; }
+  50% { box-shadow: 0 0 20px #FFD700, 0 0 40px #FFD700; }
+  100% { box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700; }
+}
+
+img {
+  animation: goldGlow 2s ease-in-out infinite;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+    </style>
     <h1>Rx</h1>
     <p>I edit video clips to make it more better in my own way .</p>
   </header>
