--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
 
   <header>
-    <img src="logo.png" alt="Logo" style="
+    <img src="logo/logo.png" alt="Logo" style="
   width: 60px; 
   height: 60px; 
   border-radius: 50%; 
