--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ img {
   margin-bottom: 10px;
 }
     </style>
-    <h1>Rx</h1>
+    <h1>𓆩Rx𓆪</h1>
     <p>I edit video clips to make it more better in my own way .</p>
   </header>
 
