--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@ img {
     </p>
   </section>
 
+  <section class="reminder">
+  <h2 style="color: red; text-align: left;">Reminder</h2>
+  <p>
+    Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
+  </p>
+  </section>
+
   <footer>
     Created by <strong>RSG™</strong> - Rahul Kushwaha
   </footer>
