--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     }
 
     @keyframes colorChange {
-  0% { color: #00fff7; }
-  25% { color: #ff00ff; }
+  0% { color:  #00fff7; }
+  25% { color: #ff0000; }
   50% { color: #00ff00; }
   75% { color: #ffcc00; }
   100% { color: #00fff7; }
