--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ img {
   </section>
 
   <section class="reminder">
-  <h2 style="color: red; text-align: left;">Reminder</h2>
+  <h2 style="color: #ff0000; text-align: left;">⚠️Reminder</h2>
   <p>
     Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
   </p>
