--- a/index.html
+++ b/index.html
@@ -145,26 +145,34 @@ img {
   margin-bottom: 10px;
 }
     </style>
+
     <style>
-.glow-border {
+.glow-border-bottom {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 4px;
-  background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
+  background: linear-gradient(90deg, white, orange, yellow, green, cyan, blue, violet);
   background-size: 400% 400%;
-  animation: glowMove 5s linear infinite;
+  animation: glowMove 5s linear infinite, glowEffect 2s ease-in-out infinite alternate;
   z-index: 9999;
+  box-shadow: 0 0 10px white, 0 0 20px white;
 }
 
 @keyframes glowMove {
   0% { background-position: 0% 50%; }
   100% { background-position: 100% 50%; }
 }
+
+@keyframes glowEffect {
+  from { box-shadow: 0 0 5px white, 0 0 10px white; }
+  to { box-shadow: 0 0 20px white, 0 0 40px white; }
+}
 </style>
 
-<div class="glow-border"></div>
+<div class="glow-border-bottom"></div>
+    
     <h1>𓆩Rx𓆪</h1>
     <p>I edit video clips to make it more better in my own way.</p>
   </header>
@@ -198,7 +206,7 @@ img {
   </section>
 
   <section class="reminder">
-  <h2 style="color: #ff0000; text-align: left;">👾Reminder</h2>
+  <h2 style="color: #ff0000; text-align: left;">👾Info:- </h2>
   <p>
     Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
   </p>
