--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@ img {
 }
 
 @keyframes glowEffect {
-  from { box-shadow: 0 0 5px white, 0 0 10px white; }
+  from { box-shadow: 0 0 5px orange, 0 0 10px orange; }
   to { box-shadow: 0 0 20px white, 0 0 40px white; }
+  to { box-shadow: 0 0 20px green, 0 0 40px green; }
 }
 </style>
 
 <div class="glow-border-bottom"></div>
     
-    <h1>𓆩Rx𓆪</h1>
+    <h1>𓆩Rsg𓆪</h1>
     <p>I edit video clips to make it more better in my own way.</p>
   </header>
 
