--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ img {
 }
 
 @keyframes glowEffect {
-  from { box-shadow: 0 0 5px orange, 0 0 10px orange; }
-  to { box-shadow: 0 0 20px white, 0 0 40px white; }
-  to { box-shadow: 0 0 20px green, 0 0 40px green; }
+  from { box-shadow: 0 0 35px orange, 0 0 35px orange; }
+  to { box-shadow: 0 0 30px white, 0 0 30px white; }
+  to { box-shadow: 0 0 25px lime green, 0 0 25px lime green; }
 }
 </style>
 
@@ -207,7 +207,7 @@ img {
   </section>
 
   <section class="reminder">
-  <h2 style="color: #ff0000; text-align: left;">👾Info</h2>
+  <h2 style="color: #ff0000; text-align: left;">Info</h2>
   <p>
     Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
   </p>
