--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@ img {
 }
 
 @keyframes glowMove {
-  0% { background-position: 0% 50%; }
-  100% { background-position: 100% 50%; }
+  0% { background-position: 70% 85%; }
+  100% { background-position: 100% 85%; }
 }
 
 @keyframes glowEffect {
-  from { box-shadow: 0 0 35px orange, 0 0 35px orange; }
-  to { box-shadow: 0 0 30px white, 0 0 30px white; }
-  to { box-shadow: 0 0 25px lime green, 0 0 25px lime green; }
+  from { box-shadow: 0 0 30px orange, 0 0 30px orange; }
+       { box-shadow: 0 0 25px white, 0 0 25px white; }
+  to { box-shadow: 0 0 20px lime green, 0 0 20px lime green; }
 }
 </style>
 
@@ -207,7 +207,7 @@ img {
   </section>
 
   <section class="reminder">
-  <h2 style="color: #ff0000; text-align: left;">Info</h2>
+  <h2 style="color: red; text-align: left;">🎗️Info</h2>
   <p>
     Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
   </p>
