--- a/index.html
+++ b/index.html
@@ -161,14 +161,13 @@ img {
 }
 
 @keyframes glowMove {
-  0% { background-position: 70% 85%; }
-  100% { background-position: 100% 85%; }
+  0% { background-position: 30% 65%; }
+  100% { background-position: 100% 65%; }
 }
 
 @keyframes glowEffect {
-  from { box-shadow: 0 0 30px orange, 0 0 30px orange; }
-       { box-shadow: 0 0 25px white, 0 0 25px white; }
-  to { box-shadow: 0 0 20px lime green, 0 0 20px lime green; }
+  from { box-shadow: 0 0 35px white, 0 0 30px white; }
+  to { box-shadow: 0 0 30px yellow, 0 0 45px yellow; }
 }
 </style>
 
