--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ img {
   <section class="reminder">
   <h2 style="color: red; text-align: left;">🎗️Info</h2>
   <p>
-    Editrek is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
+    "Editrek" is my own YouTube channel, but due to some reason, it is no longer with me and I no longer have control over it.
   </p>
   </section>
 
