--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@ img {
       <video controls>
         <source src="Edits/Edit5.mp4" type="video/mp4">
       </video>
+      <video controls>
+        <source src="Edits/Edit6.mp4" type="video/mp4">
+      </video>
+      <video controls>
+        <source src="Edits/Edit7.mp4" type="video/mp4">
+      </video>
     </div>
   </section>
 
