--- a/index.html
+++ b/index.html
@@ -180,9 +180,14 @@ img {
   <section>
     <h2>𓆩My Edits𓆪</h2>
     <div class="gallery">
-      <video controls>
+      <div class="video-block" style="text-align: center;">
+  <video controls>
         <source src="Edits/Edit1.mp4" type="video/mp4">
-      </video>
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 1: Just a small Intro 🪽
+  </p>
+      </div>
       <video controls>
         <source src="Edits/Edit2.mp4" type="video/mp4">
       </video>
