--- a/index.html
+++ b/index.html
@@ -188,15 +188,30 @@ img {
     Edit 1: Just a small Intro 🪽
   </p>
       </div>
-      <video controls>
+      <div class="video-block" style="text-align: center;">
+  <video controls>
         <source src="Edits/Edit2.mp4" type="video/mp4">
-      </video>
-      <video controls>
-        <source src="Edits/Edit3.mp4" type="video/mp4">
-      </video>
-      <video controls>
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 2: Zn Fodástica 2 × Thor vs hulk fight 🪽
+  </p>
+      </div>
+      <div class="video-block" style="text-align: center;">
+  <video controls width="200" loading="lazy">
+    <source src="Edits/Edit3.mp4" type="video/mp4">
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 3: 6 Avengers × Life force [Rj pasin] 🪽
+  </p>
+      </div>
+      <div class="video-block" style="text-align: center;">
+  <video controls>
         <source src="Edits/Edit4.mp4" type="video/mp4">
-      </video>
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 4: Endgame × slava & village remix funk 🪽
+  </p>
+      </div>
       <video controls>
         <source src="Edits/Edit5.mp4" type="video/mp4">
       </video>
