--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ img {
         <source src="Edits/Edit1.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
-    Edit 1: Just a small Intro 🪽
+    Edit 1: Just a small Intro.
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -193,7 +193,7 @@ img {
         <source src="Edits/Edit2.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
-    Edit 2: Zn Fodástica 2 × Thor vs hulk fight 🪽
+    Edit 2:  Zn Fodástica 2 × Thor vs hulk fight.
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -201,7 +201,7 @@ img {
     <source src="Edits/Edit3.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
-    Edit 3: 6 Avengers × Life force [Rj pasin] 🪽
+    Edit 3: 6 Avengers × Life force [Rj pasin].
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -209,18 +209,33 @@ img {
         <source src="Edits/Edit4.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
-    Edit 4: Endgame × slava & village remix funk 🪽
+    Edit 4:  Endgame × slava & village remix funk.
   </p>
       </div>
-      <video controls>
+      <div class="video-block" style="text-align: center;">
+<video controls>
         <source src="Edits/Edit5.mp4" type="video/mp4">
-      </video>
-      <video controls>
+</video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 5:  Thor × space [Naomi].
+  </p>
+      </div>
+      <div class="video-block" style="text-align: center;">
+  <video controls>
         <source src="Edits/Edit6.mp4" type="video/mp4">
-      </video>
-      <video controls>
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 3:  Let her think × VIDRADO EM VOCE ARABIC REMIX.
+  </p>
+      </div>
+      <div class="video-block" style="text-align: center;">
+  <video controls>
         <source src="Edits/Edit7.mp4" type="video/mp4">
-      </video>
+  </video>
+  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+    Edit 7:  𓆩Rsg × AVAGARD𓆪
+  </p>
+      </div>
     </div>
   </section>
 
