--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ img {
   <video controls>
         <source src="Edits/Edit1.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 1: Just a small Intro.
   </p>
       </div>
@@ -192,7 +192,7 @@ img {
   <video controls>
         <source src="Edits/Edit2.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 2:  Zn Fodástica 2 × Thor vs hulk fight.
   </p>
       </div>
@@ -200,7 +200,7 @@ img {
   <video controls width="200" loading="lazy">
     <source src="Edits/Edit3.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 3: 6 Avengers × Life force [Rj pasin].
   </p>
       </div>
@@ -208,7 +208,7 @@ img {
   <video controls>
         <source src="Edits/Edit4.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 4:  Endgame × slava & village remix funk.
   </p>
       </div>
@@ -216,7 +216,7 @@ img {
 <video controls>
         <source src="Edits/Edit5.mp4" type="video/mp4">
 </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 5:  Thor × space [Naomi].
   </p>
       </div>
@@ -224,7 +224,7 @@ img {
   <video controls>
         <source src="Edits/Edit6.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 3:  Let her think × VIDRADO EM VOCE ARABIC REMIX.
   </p>
       </div>
@@ -232,7 +232,7 @@ img {
   <video controls>
         <source src="Edits/Edit7.mp4" type="video/mp4">
   </video>
-  <p class="video-title" style="margin-top: 5px; color: #FDE295; font-size: 0.9rem;">
+  <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
     Edit 7:  𓆩Rsg × AVAGARD𓆪
   </p>
       </div>
