--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
       line-height: 1.6;
     }
 
+    .view-counter {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  z-index: 9999;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 4px 8px;
+  border-radius: 6px;
+  backdrop-filter: blur(4px);
+}
+
+.view-counter img {
+  height: 20px;
+}
+
     .marquee {
       width: 100%;
       overflow: hidden;
@@ -256,6 +271,12 @@ img {
   <footer>
     Created by <strong>RSG™</strong> - Rahul Kushwaha
   </footer>
+
+  <div class="view-counter">
+  <a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=20956597&style=0009&nbdigits=6&type=page&initCount=0" title="Counter Widget" alt="Visit counter For Websites" border="0" />
+  </a>
+  </div>
 
   <script>
   const videos = document.querySelectorAll("video");
