--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ img {
         <source src="Edits/Edit6.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
-    Edit 3:  Let her think × VIDRADO EM VOCE ARABIC REMIX.
+    Edit 3:  Let her think × VIDRADO EM VOCE REMIX.
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -270,6 +270,12 @@ img {
     });
   });
   </script>
+
+  <div style="position: fixed; bottom: 10px; left: 10px; z-index: 9999;">
+  <a href="https://visitorbadge.io/status?path=https%3A%2F%2Feditorrx.github.io%2FEdit%2F" target="_blank">
+    <img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Feditorrx.github.io%2FEdit%2F&label=Viewers&countColor=%23263759&style=plastic&labelStyle=none" alt="Viewers Count"/>
+  </a>
+  </div>
 
 </body>
 </html>
