--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
   100% { box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700; }
 }
 
-img {
+      /* Only apply to logo image */
+header img {
   animation: goldGlow 2s ease-in-out infinite;
   width: 60px;
   height: 60px;
@@ -144,6 +145,7 @@ img {
   object-fit: cover;
   margin-bottom: 10px;
 }
+
     </style>
 
     <style>
