--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ header img {
         <source src="Edits/Edit5.mp4" type="video/mp4">
 </video>
   <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
-    Edit 5:  Thor × space [Naomi].
+    Edit 5:  Thor × Space [Naomi].
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
