--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ header img {
         <source src="Edits/Edit4.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
-    Edit 4:  Endgame × slava & village remix funk.
+    Edit 4:  Endgame × Slava & village remix funk.
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
