--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       box-shadow: 0 0 10px #00fff7;
     }
 
-    <audio id="bg-music" autoplay loop>
+    <audio id="bg-music" autoplay loop muted>
   <source src="music/pirate_theme.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
@@ -395,6 +395,5 @@ header img {
   </script>
 
   
-
 </body>
 </html>
