--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </div>
 </div>
 
-  <audio id="bg-music" loop>
+  <audio id="bg-music" loop muted autoplay>
   <source src="music/pirate_theme.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
@@ -180,7 +180,7 @@
     font-size: 0.85rem;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
-  ">🔊 Music On</button>
+  ">🔇 Music Off</button>
 </div>
 
 <!-- Main Website Content (Hidden Initially) -->
