--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </div>
 </div>
 
-  <audio id="bg-music" loop muted autoplay>
+  <audio id="bg-music" loop>
   <source src="music/pirate_theme.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
@@ -180,9 +180,8 @@
     font-size: 0.85rem;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
-  ">🔇 Music Off</button>
+  ">🔊 Music On</button>
 </div>
-
 <!-- Main Website Content (Hidden Initially) -->
 <div id="main-website" style="display: none;">
  
@@ -273,7 +272,7 @@ header img {
     <source src="Edits/Edit3.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
-    Edit 3: Six Avengers × Life force [Rj pasin].
+    Edit 3: 6 Avengers × Life force [Rj pasin].
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -363,6 +362,10 @@ header img {
     }
     document.getElementById('entry-card').style.display = 'none';
     document.getElementById('main-website').style.display = 'block';
+
+    // ✅ Play music when user enters
+  const music = document.getElementById("bg-music");
+  music.play();
   }
   </script>
   
