--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
 
   <audio id="bg-music" loop>
-  <source src="music/kill.mp3" type="audio/mp3">
+  <source src="music/suno.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
