--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
       line-height: 1.6;
     }
 
+    <audio id="bg-music" loop>
+  <source src="music/pirate_theme.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+
+<div id="music-toggle" style="
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 10000;
+">
+  <button onclick="toggleMusic()" style="
+    background: rgba(255, 255, 255, 0.15);
+    color: #00fff7;
+    border: 1px solid #00fff7;
+    padding: 6px 12px;
+    border-radius: 10px;
+    font-size: 0.85rem;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+  ">▶️ Play Music</button>
+</div>
+
      .entry-card {
       position: fixed;
       top: 0;
@@ -286,32 +309,7 @@ header img {
       </div>
     </div>
   </section>
-
-  <audio id="bg-music" loop>	
-   <source src="music/pirate_theme.mp3" type="audio/mp3">
-    <button onclick="music.play()">Start Music (If Not Playing)</button>
-  Your browser does not support the audio element.
-  </audio>
-
- <div id="music-toggle" style="
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  z-index: 10000;
-">
-  <button id="music-btn" onclick="toggleMusic()" style="
-    background: rgba(255, 255, 255, 0.15);
-    color: #00fff7;
-    border: 1px solid #00fff7;
-    padding: 6px 12px;
-    border-radius: 10px;
-    font-size: 0.85rem;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-  ">🔊 Music On</button>
- </div>
-  
-
+ 
   <section class="about">
     <h2>About Me</h2>
     <p>
@@ -329,6 +327,23 @@ header img {
   <footer>
     Created by <strong>RSG™</strong> - Rahul Kushwaha
   </footer>
+  
+  <script>
+  const music = document.getElementById("bg-music");
+  const btn = document.querySelector("#music-toggle button");
+  let isPlaying = false;
+
+  function toggleMusic() {
+    if (!isPlaying) {
+      music.play();
+      btn.textContent = "⏸️ Pause Music";
+    } else {
+      music.pause();
+      btn.textContent = "▶️ Play Music";
+    }
+    isPlaying = !isPlaying;
+  }
+</script>
   
   <script>
   const videos = document.querySelectorAll("video");
@@ -367,77 +382,6 @@ header img {
   }
   </script>
   
-  <script>
-  const music = document.getElementById("bg-music");
-  const btn = document.querySelector("#music-toggle button");
-  let isPlaying = false;
-
-  // Try to play music on user interaction
-  function enableMusicAutoplay() {
-    if (!isPlaying) {
-      music.play().then(() => {
-        isPlaying = true;
-        btn.textContent = "🔊 Music On";
-      }).catch(() => {
-        btn.textContent = "🔇 Music Off";
-      });
-    }
-    window.removeEventListener("click", enableMusicAutoplay);
-  }
-
-  window.addEventListener("click", enableMusicAutoplay);
-
-  function toggleMusic() {
-    if (isPlaying) {
-      music.pause();
-      btn.textContent = "🔇 Music Off";
-    } else {
-      music.play();
-      btn.textContent = "🔊 Music On";
-    }
-    isPlaying = !isPlaying;
-  }
-  </script>
-
-  <script>
-  const music = document.getElementById("bg-music");
-  const btn = document.getElementById("music-btn");
-  let isPlaying = true;
-
-  function toggleMusic() {
-    if (isPlaying) {
-      music.pause();
-      btn.textContent = "🔇 Music Off";
-    } else {
-      music.play();
-      btn.textContent = "🔊 Music On";
-    }
-    isPlaying = !isPlaying;
-  }
-
-  // Play music after user enters (trigger inside validateEntry)
-  function validateEntry() {
-    const name = document.getElementById('username').value.trim();
-    const age = parseInt(document.getElementById('userage').value);
-    if (!name || isNaN(age)) {
-      alert("Please fill in both name and age.");
-      return;
-    }
-    if (age < 6) {
-      alert("Sorry, you must be at least 6 years old to view this site.");
-      return;
-    }
-
-    document.getElementById('entry-card').style.display = 'none';
-    document.getElementById('main-website').style.display = 'block';
-
-    // 🔥 Trigger audio here
-    music.play().catch(() => {
-      console.log("Autoplay blocked. User must click the toggle.");
-    });
-  }
-  </script>
-
   
 </body>
 </html>
