--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ header img {
     <source src="Edits/Edit3.mp4" type="video/mp4">
   </video>
   <p class="video-title" style="margin-top: 5px; color: #c8ed42; font-size: 0.9rem;">
-    Edit 3: six Avengers × Life force [Rj pasin].
+    Edit 3: 6 Avengers × Life force [Rj pasin].
   </p>
       </div>
       <div class="video-block" style="text-align: center;">
@@ -342,12 +342,9 @@ header img {
   }
   </script>
 
-     <div>
-    <audio id="bg-music" loop autoplay>
+     <audio control>
   <source src="music/pirate_theme.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
 </audio>
-    </div>
 
 <div id="music-toggle" style="
   position: fixed;
