--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@ header img {
   }
   </script>
 
-     <audio control>
-  <source src="music/pirate_theme.mp3" type="audio/mp3">
+     <audio id ="bg-music" loop>
+  <source src="Edits/suno.mp3" type="audio/mp3">
 </audio>
 
 <div id="music-toggle" style="
