--- a/index.html
+++ b/index.html
@@ -420,10 +420,10 @@ videos.forEach(video => {
   function toggleMusic() {
     if (!isPlaying) {
       music.play();
-      btn.textContent = "🔇 Music off";
+      btn.textContent = "🔊 Music off";
     } else {
       music.pause();
-      btn.textContent = "🔊 Music on";
+      btn.textContent = "🔇 Music on";
     }
     isPlaying = !isPlaying;
   }
