--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- Entry Card -->
 <div id="entry-card" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, #FFD700, #FFA500); display: flex; align-items: center; justify-content: center; z-index: 99999;">
   <div style="background: rgba(0, 0, 0, 0.6); padding: 30px 40px; border-radius: 16px; text-align: center; box-shadow: 0 0 30px gold;">
-    <h2 style="color: white; margin-bottom: 20px;">Enter Your Details</h2>
+    <h2 style="color: white; margin-bottom: 20px;">verify you're Human!</h2>
     <input type="text" id="username" placeholder="Enter your name" style="padding: 10px 15px; margin-bottom: 15px; border: none; border-radius: 8px; outline: none; background: #222; color: white; box-shadow: 0 0 10px #FFD700;" /><br/>
     <input type="number" id="userage" placeholder="Enter your age" style="padding: 10px 15px; margin-bottom: 20px; border: none; border-radius: 8px; outline: none; background: #222; color: white; box-shadow: 0 0 10px #FFD700;" /><br/>
     <button onclick="validateEntry()" style="background: #24243e; color: #00fff7; padding: 10px 25px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">View Premium Edits</button>
@@ -318,30 +318,7 @@ header img {
     });
   });
   </script> 
-    <script>
-  const videos = document.querySelectorAll("video");
-
-  videos.forEach(video => {
-    video.addEventListener("pause", () => {
-      if (isPlaying) {
-        music.play();
-      }
-    });
-
-    video.addEventListener("play", () => {
-      if (!music.paused) {
-        music.pause();
-      }
-    });
-
-    video.addEventListener("ended", () => {
-      if (isPlaying) {
-        music.play();
-      }
-    });
-  });
-    </script>
-
+    
   <div style="position: fixed; bottom: 10px; left: 10px; z-index: 9999;">
   <a href="https://visitorbadge.io/status?path=https%3A%2F%2Feditorrx.github.io%2FEdit%2F" target="_blank">
     <img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Feditorrx.github.io%2FEdit%2F&label=Viewers&countColor=%23263759&style=plastic&labelStyle=none" alt="Viewers Count"/>
@@ -387,69 +364,61 @@ header img {
   ">🔇 pause music</button>
 </div>
 
-  <script>
-function validateEntry() {
-  const name = document.getElementById('username').value.trim();
-  const age = parseInt(document.getElementById('userage').value);
-  if (!name || isNaN(age)) {
-    alert("Please fill in both name and age.");
-    return;
-  }
-  if (age < 6) {
-    alert("Sorry, you must be at least 6 years old to view this site.");
-    return;
-  }
-
-  // Hide entry, show site
-  document.getElementById('entry-card').style.display = 'none';
-  document.getElementById('main-website').style.display = 'block';
-
-  // Autoplay background music
-  const bgMusic = document.getElementById('bg-music');
-  bgMusic.play();
-}
-  </script>
-
-  <script>
-const videos = document.querySelectorAll("video");
-const bgMusic = document.getElementById("bg-music");
-
-videos.forEach(video => {
-  video.addEventListener("play", () => {
-    if (!bgMusic.paused) {
-      bgMusic.pause();
-    }
-  });
-
-  video.addEventListener("pause", () => {
-    if (document.getElementById("main-website").style.display !== 'none') {
-      bgMusic.play();
-    }
-  });
-
-  video.addEventListener("ended", () => {
-    if (document.getElementById("main-website").style.display !== 'none') {
-      bgMusic.play();
-    }
-  });
-});
-  </script>
-  
-  <script>
+<script>
   const music = document.getElementById("bg-music");
   const btn = document.querySelector("#music-toggle button");
-  let isPlaying = false;
+  let isPlaying = true;
 
   function toggleMusic() {
-    if (!isPlaying) {
+    if (music.paused) {
       music.play();
-      btn.textContent = "🔇 pause music";
+      btn.textContent = "🔇 Pause Music";
+      isPlaying = true;
     } else {
       music.pause();
-      btn.textContent = "🔊 play Music";
+      btn.textContent = "🔊 Play Music";
+      isPlaying = false;
     }
-    isPlaying = !isPlaying;
   }
+
+  // Resume music after entry card
+  function validateEntry() {
+    const name = document.getElementById('username').value.trim();
+    const age = parseInt(document.getElementById('userage').value);
+    if (!name || isNaN(age)) {
+      alert("Please fill in both name and age.");
+      return;
+    }
+    if (age < 6) {
+      alert("Sorry, you must be at least 6 years old to view this site.");
+      return;
+    }
+
+    document.getElementById('entry-card').style.display = 'none';
+    document.getElementById('main-website').style.display = 'block';
+    if (isPlaying) music.play();  // start only if toggle is on
+  }
+
+  // Auto pause music on video play, resume on pause/end
+  document.querySelectorAll("video").forEach(video => {
+    video.addEventListener("play", () => {
+      if (!music.paused) {
+        music.pause();
+      }
+    });
+
+    video.addEventListener("pause", () => {
+      if (isPlaying) {
+        music.play();
+      }
+    });
+
+    video.addEventListener("ended", () => {
+      if (isPlaying) {
+        music.play();
+      }
+    });
+  });
 </script>
 
   
